# lala

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LLML.Dockerfile  README.md  ai-config.yaml  docker-compose.yaml  init.sql  psql.Dockerfile  testnews.py
.github/: copilot-instructions.md
LLML/: Cargo.toml
LLML/src/: main.rs
LLML/src/api/: mod.rs
LLML/src/loalYaml/: loadYaml.rs  mod.rs
LLML/src/model/: model.rs
doc/: LLML-py.md  LLML.md  RAG.md  architecture.md  lala.md  phase0.md
doc/planning/: phase0-rag.md
lala/: Cargo.toml
lala/src/: cli.rs  main.rs
lala/src/agent/: model.rs  planner.rs
lala/src/cli/: chat.rs  commands.rs  display.rs  ingest.rs  mod.rs
pipeline/src/entities/: quries.rs
rag/: Cargo.toml
rag/src/: chunker.rs  lib.rs
telegram/bot/: handlers.py
